# awscleaner

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
awscleaner/: awsweeper.py  cleaner.py  cli.py  io_utils.py
tests/: test_awsweeper.py  test_cleaner.py  test_io_utils.py
